<resources>
    <string name="app_name">BakingTime</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_no_video">No video available</string>
    <string name="play_prev_btn">Play Previous</string>
    <string name="play_next_btn">Play Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_btn">Get Ingredients!</string>
    <string name="widget_select_btn">Select A Recipe!</string>
</resources>
