<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailScreen.InstructionFragment">

    <TextView
        android:id="@+id/instruction_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/MarginXXL"
        android:layout_marginHorizontal="@dimen/MarginXL"
        android:textSize="15sp"
        android:gravity="center_horizontal"/>

</FrameLayout>